--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.14",
+    "node-sass": "^5.0.0",
     "puppeteer": "^5.4.1",
+    "sass-loader": "^10.1.0",
+    "vue": "^2.6.12",
     "winston": "^3.3.3"
   },
   "scripts": {
