--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "author": "Bartek <bartek.bober.koder@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gender-detection": "^0.1.0",
+    "lodash.deburr": "^4.1.0",
     "mongoose": "^5.10.14",
     "node-sass": "^5.0.0",
     "puppeteer": "^5.4.1",
