--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "cors": "^2.8.5",
+    "count-lines-in-file": "^1.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gender-detection": "^0.1.0",
+    "line-reader": "^0.4.0",
     "lodash.deburr": "^4.1.0",
     "mongoose": "^5.10.14",
     "node-sass": "^5.0.0",
     "puppeteer": "^5.4.1",
+    "read-last-lines": "^1.7.2",
     "sass-loader": "^10.1.0",
     "vue": "^2.6.12",
     "winston": "^3.3.3"
