--- a/gui/package.json
+++ b/gui/package.json
@@ -11,6 +11,7 @@
     "@vue/composition-api": "^1.0.0-beta.19",
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
+    "lodash.uniqby": "^4.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
