--- a/gui/package.json
+++ b/gui/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "lodash.uniqby": "^4.7.0",
+    "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
