--- a/.env-template
+++ b/.env-template
@@ -3,5 +3,5 @@ API_AUTH_KEY=anythinguwant
 
 DB_NAME=libot
 
-BROWSER_CFG=local #prod for production
-ENV=local #prod for production
+BROWSER_CFG=local
+ENV=local
