add base of checking wether use answered the message

--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,8 @@
 API_PORT=9090
 API_AUTH_KEY=anythinguwant
 
+DB_HOST=mongodb://
+#libot - production | libotTest - test
 DB_NAME=libot
 
 BROWSER_CFG=local
