--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Bartek <bartek.bober.koder@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@vue/cli-service": "^4.5.13",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
